# torch-max-backend-demo

./: LICENSE  README.md
custom_ops/: pyproject.toml
gpt2/: main.py  pyproject.toml
max_device/: main.py  pyproject.toml
