[project]
name = "custom-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "requests>=2.32.5",
    "torch-max-backend",
]

[tool.uv.sources]
torch-max-backend = { path = "../../torch-max-backend/dist/torch_max_backend-0.3.0-py3-none-any.whl" }
